# eVTOL_BSplines

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  control_points_0.npy  eVTOL_BSplines.toml  pathTest.py  requirements.txt  setup.py
eVTOL_BSplines/: __init__.py  eVTOL_pathGeneration.py  importer.py  path_generator_simplified.py  path_plotter.py  uniform_path_generator.py
eVTOL_BSplines.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
launchFiles/: dynamicFlightPathLaunch.py  lookUpTableGenerator.py  lookUpTableGeneratorLaunch.py  lookUpTableReaderLaunch.py  staticFlightPathLaunch.py
rwb/: bspline_tools.py  create_uniform_canonica_basis.py  rwb_bspline.py
tests/: B_hat_matrix_test.py  B_matrix_test.py  C_star_test.py  C_star_test_1.py  C_star_test_2.py  Equations_refactored.py  Equations_simplification.py  MinimumSnapDerivations.py  S_tests.py  SupportMatrix.py  W_integrity_tests.py  W_tests.py  basisFunctionPlotting.py  conditions_presentation.py  controlPointsTest.py  dijkstra_test.py  directoryTests.py  firstTest.py  initialConditionsTest.py  integration_test.py  integration_test_2.py  interpolationTest.py  lookUpTableGenerator.py  lookUpTableGenerator2.py  lookUpTableGenerator3.py  lookUpTableReader.py  lookUpTablereader.py  lookUpTablereader2.py  lookupTableTest.py  lstsq_test.py  pathGeneratorTest.py  path_gen_test.py  path_generator_wrapper_test.py  rosTest.py  sectionsDisplay.py  sectionsShifting.py  staticTest.py  twb_bspline_tests.py  uniform_tests.py  uniform_tests_2.py
venvEVtol/: pyvenv.cfg
wrappers/: path_generator_simplified.py
(+103 files in other folders)
